--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
-  font-family: 'Titan One', cursive;
+  text-align: center; 
+  color: #ffffff;
 }
 .gameBody {
   background-color: rgba(0, 0, 0, 0.09); 
@@ -15,6 +15,28 @@
   font-size: 2rem;
   flex-shrink: 0;
   user-select: none;
+}
+
+button {
+  border-radius: 8px;
+  border: none;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #0000001a;
+  color: #ffffff;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  transition: background-color 0.25s;
+  background-color: #00000035; 
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
 
 /* loading animation component: RefreshCcw */
