--- a/docs/assets/index-DIQeVfEw.css
+++ b/docs/assets/index-DIQeVfEw.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Fredoka";
   line-height: 1.5;
   font-weight: 400;
 
@@ -294,8 +294,8 @@ align-items: center;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
-  font-family: 'Titan One', cursive;
+  text-align: center; 
+  color: #ffffff;
 }
 .gameBody {
   background-color: rgba(0, 0, 0, 0.09); 
@@ -307,6 +307,28 @@ align-items: center;
   font-size: 2rem;
   flex-shrink: 0;
   user-select: none;
+}
+
+button {
+  border-radius: 8px;
+  border: none;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #0000001a;
+  color: #ffffff;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  transition: background-color 0.25s;
+  background-color: #00000035; 
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
 
 /* loading animation component: RefreshCcw */
@@ -372,7 +394,9 @@ align-items: center;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
-
+.question-cheat-button{
+    margin-bottom: 10px; 
+}
 .cheater-message-player-list {
     list-style-type: none;
 }
@@ -405,11 +429,15 @@ align-items: center;
     .question {
         font-size: 1.3em;
     }
+    .answer {
+        width: 35%;
+    }
 }
 .GameTitle { 
-    font-family: 'Titan One', cursive;
     font-size: 5.2em; 
     user-select: none;
+    color: #ffffff;
+    font-weight: 600;
 }
 
 @media (max-width: 768px) {
@@ -509,6 +537,11 @@ align-items: center;
     transform: scale(1.03);
 }
 
+.vote-option .vote-option-disabled {
+    cursor: none;
+    transition: none;
+
+}
 /* Aligning player data horizontally */
 .vote-player {
     display: flex;
