--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,10 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
 /* loading animation component: RefreshCcw */
 @keyframes loading {
   0% { transform: rotate(0deg); }
