--- a/src/component/joinGame/JoinGame.css
+++ b/src/component/joinGame/JoinGame.css
@@ -94,7 +94,10 @@ align-items: center;
   justify-content: center;
   font-size: 1.2rem; /* Adjust icon size */
 }
-
+.play-btn.disabled {
+  pointer-events: none;
+  opacity: 0.5;
+}
 .pin-input {
   width: 100%; /* Make the input take full width */
   padding-right: 2.5rem; /* Add padding to the right for the button */
