--- a/src/component/playerList/PlayerList.css
+++ b/src/component/playerList/PlayerList.css
@@ -32,41 +32,46 @@
     background: none;
     box-shadow: none;
 }
+.loading { 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-@keyframes wiggle {
-    0% { transform: rotate(0deg); }
-    25% { transform: rotate(-5deg); }
-    50% { transform: rotate(5deg); }
-    75% { transform: rotate(-5deg); }
-    100% { transform: rotate(0deg); }
-  }
-  
-  @keyframes jump {
-    0%, 100% { transform: translateY(0); }
-    50% { transform: translateY(-10px); }
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
-  @keyframes flip {
-    0% { transform: rotateY(0deg); }
-    50% { transform: rotateY(180deg); }
-    100% { transform: rotateY(360deg); }
-  }
-  
-  .profile-pic.playerProfile.flip {
-    animation: flip 1.4s ease-in-out infinite;
-  }
-  .profile-pic.playerProfile.wiggle {
-    animation: wiggle 0.8s ease-in-out infinite;
-  }
-  
-  .profile-pic.playerProfile.jump {
-    animation: jump 0.5s ease-in-out infinite;
-  }
-  
-  .profile-pic.playerProfile.spin {
-    animation: spin 2.5s linear infinite;
-  }
+.loading-button {
+    gap: 10px;
+    font-size:1.5rem;
+    width: 22%;
+    padding: 5px;
+    display: flex;
+    align-items:center;
+    text-align: center;
+}
+
+.loadingIcon {
+    font-size: 1rem;
+    color: #ffffff;
+    display: inline-block;
+    animation: loadingAnimation 1s linear infinite;
+}
+
+.profile-pic.playerProfile.flip {
+  display: inline-block;
+  animation: flip 1s ease-in-out infinite;
+  transform-style: preserve-3d; 
+}
+.profile-pic.playerProfile.wiggle {
+  display: inline-block;
+  animation: wiggle 1s ease-in-out infinite;
+  /* transform-origin: center bottom; /* makes the wiggle feel like a head turning */
+}
+.profile-pic.playerProfile.jump {
+  animation: jump 1.2s ease-in-out infinite;
+  animation-delay: calc(var(--i) * 0.1s); /* use --i for index */
+}
+
+.profile-pic.playerProfile.spin {
+  display: inline-block;
+  animation: spin 1.5s linear infinite;
+  transform-origin: center center;
+}
